# Scarlett

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/2020-01-10-000000_add_plv8_extension/: down.sql  up.sql
migrations/2020-01-10-000001_create_aspect_ratio_function/: down.sql  up.sql
migrations/2020-01-10-000002_enable_crypto/: down.sql
migrations/2020-01-10-000003_enable_fuzzy_string_matching/: up.sql
migrations/2020-01-10-000004_create_strip_alt_names_function/: down.sql  up.sql
migrations/2020-01-10-173802_create_photos/: down.sql  up.sql
migrations/2020-01-10-175618_wallpaper_tables/: down.sql  up.sql
migrations/2020-01-10-180026_tags_tables/: down.sql  up.sql
migrations/2020-01-10-180714_people_tables/: down.sql  up.sql
migrations/2020-01-10-184120_create_photos_all_view/: down.sql  up.sql
migrations/2020-01-11-210646_create_photo_stats_view/: down.sql  up.sql
migrations/2020-01-12-185450_create_random_pagination_view/: down.sql  up.sql
migrations/2020-01-15-182550_create_sorted_entities_view/: down.sql  up.sql
migrations/2020-01-16-133032_create_entity_full_view/: down.sql  up.sql
migrations/2020-01-21-181212_add_plv8_extension/: up.sql
migrations/2020-01-21-181734_create_folder_hierarchy_view/: down.sql  up.sql
migrations/2020-01-21-203233_create_tree_view/: down.sql  up.sql
migrations/2020-01-22-165311_create_tag_stats_view/: down.sql  up.sql
migrations/2020-01-22-170545_create_entity_stats_view/: down.sql  up.sql
migrations/2020-01-22-194215_enable_fuzzy_string_matching/: up.sql
migrations/2020-01-22-233328_enable_crypto/: up.sql
migrations/2020-01-23-160346_create_collections_table/: down.sql  up.sql
migrations/2020-01-27-121532_create_aspect_ratio_function/: up.sql
src/: errors.rs  lib.rs  main.rs  types.rs
src/errors/: errors.rs
src/files/: mod.rs  photos.rs
src/handlers/: collections.rs  directory_tree.rs  entity.rs  media.rs  mod.rs  photos.rs  scan_photos.rs  stats.rs  tags.rs  wallpapers.rs
src/models/: db.rs  mod.rs  responses.rs  stats.rs  types.rs
src/pagination/: links.rs  mod.rs  page.rs  page_metadata.rs
src/requests/: get_photos_request.rs  mod.rs  search_request.rs
src/responses/: api_response.rs  mod.rs
src/schemas/: collections.rs  directory_tree.rs  entity.rs  mod.rs  new_photo.rs  photo.rs  photo_full.rs  tags.rs  wallpaper_sizes.rs
src/stats/: entities.rs  mod.rs  photos.rs  tags.rs
src/utils/: http_server.rs  images.rs  mod.rs  strings.rs
