[package]
name = "scarlett-server"
version = "0.1.0"
authors = ["Nathaniel Ledford <nate@nateledford.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
chrono = { version = "0.4.10", features = ["serde"] }
deadpool = "0.4.3"
deadpool-postgres = "0.4.3"
diesel =  { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "0.1.6"
futures = "0.3.1"
serde = { version = "1.0.104", features = ["derive"] }
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

