[package]
name = "scarlett-server"
version = "0.1.0"
authors = ["Nathaniel Ledford <nate@nateledford.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
anyhow = "1.0.26"
async-trait = "0.1.22"
chrono = { version = "0.4.10", features = ["serde"] }
deadpool = "0.5.0"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "0.1.6"
futures = "0.3.1"
image = "0.22.3"
imagesize = "0.8.0"
json = "0.12.0"
percent-encoding = "2.1.0"
rayon = "1.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
sha3 = "0.8.2"
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
url = "2.1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
walkdir = "2.2.9"

