[package]
name = "scarlett-server"
version = "0.1.0"
authors = ["Nathaniel Ledford <nate@nateledford.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-tls = "1.0.0"
actix-web = { version = "2.0.0", features = ["openssl"] }
anyhow = "1.0.26"
chrono = { version = "0.4.10", features = ["serde"] }
deadpool = "0.5.1"
deadpool-postgres = "0.5.4"
derive_more = "0.99.2"
dotenv = "0.15.0"
env_logger = "0.7.1"
image = "0.23.0"
json = "0.12.1"
openssl = { version = "0.10.28", features = ["v110"] }
percent-encoding = "2.1.0"
rayon = "1.3.0"
rust_decimal = { version = "1.2.1", features = ["serde-float", "tokio-pg"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
sha3 = "0.8.2"
thiserror = "1.0.11"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
tokio-postgres = { version = "0.5.2", features = ["with-chrono-0_4", "with-serde_json-1"] }
url = "2.1.1"
walkdir = "2.3.1"
